--- a/gentelella/src/main/resources/templates/fragments/leftmenu.html
+++ b/gentelella/src/main/resources/templates/fragments/leftmenu.html
@@ -5,13 +5,14 @@
 	<div class="col-md-3 left_col">
 		<div class="left_col scroll-view">
 			<div class="navbar nav_title" style="border: 0;">
-				<a href="/index" class="site_title"><i class="fa fa-paw"></i>
-					<span>Gentelella Alela!</span></a>
+				<a href="/index" class="site_title"><i>$‿$</i>
+					<span>cafe ~ system</span></a>
 			</div>
 
 			<div class="clearfix"></div>
 
 			<!-- menu profile quick info -->
+			
 			<div class="profile clearfix">
 				<div class="profile_pic">
 					<img src="images/img.jpg" alt="..." class="img-circle profile_img">
@@ -30,55 +31,148 @@
 				<div class="menu_section">
 					<h3>General</h3>
 					<ul class="nav side-menu">
-						<li><a><i class="fa fa-home"></i> 홈 <span
+						<li><a><i class="fa fa-home"></i> #기초 등록(의견수립필요) <span
 								class="fa fa-chevron-down"></span></a>
 							<ul class="nav child_menu">
-								<li><a th:href="@{addMember}">전체 모아보기</a></li>
-								<li><a href="">세무 모아보기</a></li>
-								<li><a href="">자산 모아보기</a></li>
-								<li><a href="">매장 모아보기</a></li>
-							</ul></li>
-						<li><a><i class="fa fa-edit"></i> 세무 관리<span
+								<li><a th:href="@{addMember}">전체</a></li>
+								<li><a href="">세무</a></li>
+								<li><a href="">매장</a></li>
+							</ul>
+						</li>
+						<li><a><i class="fa fa-desktop"></i> #매장 관리(최영은)<span
+								class="fa fa-chevron-down"></span></a>
+							<ul class="nav child_menu">							
+								<li><a>#사업장 관리(최영은)<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu">
+											<a href="#">사업장 등록</a>
+										</li>
+										<li><a href="#">사업장 조회</a></li>
+									</ul>
+								</li>
+								<li><a>#직원 관리(최영은)<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu">
+											<a href="#">직원등록</a>
+										</li>
+										<li><a href="#">직원 조회</a></li>
+									</ul>
+								</li>
+								<li><a>#거래처 관리(최영은)<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu">
+											<a href="#">거래처 등록</a>
+										</li>
+										<li><a href="#">거래처 조회</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li><a><i class="fa fa-bar-chart-o"></i> #재고 관리(진우주) <span class="fa fa-chevron-down"></span></a>
+							<ul class="nav child_menu">
+								<li><a>#메뉴(상품) 관리<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu"><a href="#">메뉴(상품) 등록</a></li>
+										<li class="sub_menu"><a href="#">메뉴(상품) 조회</a></li>
+									</ul>
+								</li>
+								<li><a>#메뉴(상품) 레시피 관리<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu"><a href="#">메뉴(상품) 레시피 등록</a></li>
+										<li class="sub_menu"><a href="#">메뉴(상품) 레시피 조회</a></li>
+									</ul>
+								</li>
+								<li><a>#품목 관리<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu"><a href="#">품목 등록</a></li>
+										<li class="sub_menu"><a href="#">품목 조회</a></li>
+									</ul>
+								</li>
+								<li><a>#재고 조사<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu"><a href="#">재고 조사 내역 등록</a></li>
+										<li class="sub_menu"><a href="#">재고 조사 내역 조회</a></li>
+									</ul>
+								</li>
+								<li>
+									<a>#총 재고 조회<span class="nav child_menu"></span></a>
+								</li>
+							</ul>
+						</li>
+						<li><a><i class="fa fa-table"></i> #급여 관리(백재영) <span
 								class="fa fa-chevron-down"></span></a>
 							<ul class="nav child_menu">
-								<li><a href="form.html">General Form</a></li>
-								<li><a href="form_advanced.html">Advanced Components</a></li>
-								<li><a href="form_validation.html">Form Validation</a></li>
-								<li><a href="form_wizards.html">Form Wizard</a></li>
-								<li><a href="form_upload.html">Form Upload</a></li>
-								<li><a href="form_buttons.html">Form Buttons</a></li>
-							</ul></li>
-						<li><a><i class="fa fa-desktop"></i> 매장 관리<span
+								<li><a>#상용직 급여(백재영)<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu"><a href="#">급여 등록</a></li>
+										<li class="sub_menu"><a href="#">급여 조회</a></li>
+									</ul>
+								</li>
+								<li><a>#일용직 급여(백재영)<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu"><a href="#">급여 등록</a></li>
+										<li class="sub_menu"><a href="#">급여 조회</a></li>
+									</ul>
+								</li>
+								<li><a>#근태 관리(백재영)<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu"><a href="#">출퇴근 등록</a></li>
+										<li class="sub_menu"><a href="#">출퇴근 조회</a></li>
+										<li class="sub_menu"><a href="#">근태 등록</a></li>
+										<li class="sub_menu"><a href="#">근태 조회</a></li>
+									</ul>
+								</li>
+								<li><a>#원천 관리(백재영)<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu"><a href="#">상용직 급여 관리</a></li>
+										<li class="sub_menu"><a href="#">상용직 급여 조회</a></li>
+										<li class="sub_menu"><a href="#">일용직 급여 관리</a></li>
+										<li class="sub_menu"><a href="#">일용직 급여 조회</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li><a><i class="fa fa-table"></i> #매입매출 관리(현진) <span
 								class="fa fa-chevron-down"></span></a>
 							<ul class="nav child_menu">
-								<li><a href="general_elements.html">General Elements</a></li>
-								<li><a href="media_gallery.html">Media Gallery</a></li>
-								<li><a href="typography.html">Typography</a></li>
-								<li><a href="icons.html">Icons</a></li>
-								<li><a href="glyphicons.html">Glyphicons</a></li>
-								<li><a href="widgets.html">Widgets</a></li>
-								<li><a href="invoice.html">Invoice</a></li>
-								<li><a href="inbox.html">Inbox</a></li>
-								<li><a href="calendar.html">Calendar</a></li>
-							</ul></li>
-						<li><a><i class="fa fa-table"></i> 자산 관리 <span
-								class="fa fa-chevron-down"></span></a>
+								<li><a>#매입 관리<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu"><a href="#">매입 등록</a></li>
+										<li class="sub_menu"><a href="#">매입 조회</a></li>
+									</ul>
+								</li>
+								<li><a>#매출 관리<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu"><a href="#">매출 등록</a></li>
+										<li class="sub_menu"><a href="#">매출 조회</a></li>
+									</ul>
+								</li>
+								<li><a>#기타 지출 관리<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu"><a href="#">기타 치출 등록</a></li>
+										<li class="sub_menu"><a href="#">기타 지출 조회</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>	
+						<li><a><i class="fa fa-bar-chart-o"></i> #세무 관리(장현진) <span class="fa fa-chevron-down"></span></a>
 							<ul class="nav child_menu">
-								<li><a href="tables.html">Tables</a></li>
-								<li><a href="tables_dynamic.html">Table Dynamic</a></li>
-							</ul></li>
-						<li><a><i class="fa fa-bar-chart-o"></i> 관리자 설정 <span class="fa fa-chevron-down"></span></a>
+								<li><a href="#">기간별 매출매입 조회</a></li>
+								<li><a href="#">부가세 조회</a></li>
+								<li><a href="#">손익계산서 조회</a></li>
+							</ul>
+						</li>
+						<li><a><i class="fa fa-bar-chart-o"></i> #관리자 설정 <span class="fa fa-chevron-down"></span></a>
 							<ul class="nav child_menu">
-								<li><a href="chartjs.html">Chart JS</a></li>
-								<li><a href="chartjs2.html">Chart JS2</a></li>
-								<li><a href="morisjs.html">Moris JS</a></li>
-								<li><a href="echarts.html">ECharts</a></li>
-								<li><a href="other_charts.html">Other Charts</a></li>
-							</ul></li>
+								<li><a href="#">고객센터</a></li>
+								<li><a href="#">1:1문의</a></li>
+								<li><a href="#">자주묻는질문(FAQ)</a></li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 				<div class="menu_section">
-					<h3>Live On</h3>
+					<h3>메모</h3>
 					<ul class="nav side-menu">
 						<li><a><i class="fa fa-sitemap"></i> Multilevel Menu <span
 								class="fa fa-chevron-down"></span></a>
@@ -89,8 +183,10 @@
 										</li>
 										<li><a href="#level2_1">Level Two</a></li>
 										<li><a href="#level2_2">Level Two</a></li>
-									</ul></li>
-							</ul></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 
@@ -101,13 +197,15 @@
 			<div class="sidebar-footer hidden-small">
 				<a data-toggle="tooltip" data-placement="top" title="Settings">
 					<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-				</a> <a data-toggle="tooltip" data-placement="top" title="FullScreen">
+				</a> 
+				<a data-toggle="tooltip" data-placement="top" title="FullScreen">
 					<span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
-				</a> <a data-toggle="tooltip" data-placement="top" title="Lock"> <span
+				</a> 
+				<a data-toggle="tooltip" data-placement="top" title="Lock"> <span
 					class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
-				</a> <a data-toggle="tooltip" data-placement="top" title="Logout"
-					href="login.html"> <span class="glyphicon glyphicon-off"
-					aria-hidden="true"></span>
+				</a> 
+				<a data-toggle="tooltip" data-placement="top" title="Logout" href="#최영은"> 
+					<span class="glyphicon glyphicon-off"aria-hidden="true"></span>
 				</a>
 			</div>
 			<!-- /menu footer buttons -->
