--- a/gentelella/src/main/resources/templates/fragments/leftmenu.html
+++ b/gentelella/src/main/resources/templates/fragments/leftmenu.html
@@ -31,18 +31,19 @@
 				<div class="menu_section">
 					<h3>General</h3>
 					<ul class="nav side-menu">
-						<li><a><i class="fa fa-home"></i> #기초 등록(의견수립필요) <span
+						<li><a><i class="fa fa-home"></i> #기초 등록(??) <span
 								class="fa fa-chevron-down"></span></a>
 							<ul class="nav child_menu">
-								<li><a th:href="@{addMember}">전체</a></li>
-								<li><a href="">세무</a></li>
-								<li><a href="">매장</a></li>
+								<li><a href="">사업장 등록</a></li>
+								<li><a href="">품목 등록</a></li>
+								<li><a th:href="@{addMember}">메뉴 등록</a></li>
+								<li><a href="">메뉴 레시피 등록</a></li>
 							</ul>
 						</li>
 						<li><a><i class="fa fa-desktop"></i> #매장 관리(최영은)<span
 								class="fa fa-chevron-down"></span></a>
 							<ul class="nav child_menu">							
-								<li><a>#사업장 관리(최영은)<span class="fa fa-chevron-down"></span></a>
+								<li><a>#사업장 관리<span class="fa fa-chevron-down"></span></a>
 									<ul class="nav child_menu">
 										<li class="sub_menu">
 											<a href="#">사업장 등록</a>
@@ -50,7 +51,7 @@
 										<li><a href="#">사업장 조회</a></li>
 									</ul>
 								</li>
-								<li><a>#직원 관리(최영은)<span class="fa fa-chevron-down"></span></a>
+								<li><a>#직원 관리<span class="fa fa-chevron-down"></span></a>
 									<ul class="nav child_menu">
 										<li class="sub_menu">
 											<a href="#">직원등록</a>
@@ -58,7 +59,7 @@
 										<li><a href="#">직원 조회</a></li>
 									</ul>
 								</li>
-								<li><a>#거래처 관리(최영은)<span class="fa fa-chevron-down"></span></a>
+								<li><a>#거래처 관리<span class="fa fa-chevron-down"></span></a>
 									<ul class="nav child_menu">
 										<li class="sub_menu">
 											<a href="#">거래처 등록</a>
@@ -95,39 +96,38 @@
 									</ul>
 								</li>
 								<li>
-									<a>#총 재고 조회<span class="nav child_menu"></span></a>
+									<a>#매입별 품목 재고 조회<span class="nav child_menu"></span></a>
+								</li>
+								<li>
+									<a>#품목별 재고 총 수량 조회<span class="nav child_menu"></span></a>
 								</li>
 							</ul>
 						</li>
 						<li><a><i class="fa fa-table"></i> #급여 관리(백재영) <span
 								class="fa fa-chevron-down"></span></a>
 							<ul class="nav child_menu">
-								<li><a>#상용직 급여(백재영)<span class="fa fa-chevron-down"></span></a>
+								<li><a>#추가수당 관리<span class="fa fa-chevron-down"></span></a>
+									<ul class="nav child_menu">
+										<li class="sub_menu"><a href="#">추가수당 등록</a></li>
+										<li class="sub_menu"><a href="#">추가수당 조회</a></li>
+									</ul>
+								</li>
+								<li><a>#상용직 급여 관리<span class="fa fa-chevron-down"></span></a>
 									<ul class="nav child_menu">
 										<li class="sub_menu"><a href="#">급여 등록</a></li>
 										<li class="sub_menu"><a href="#">급여 조회</a></li>
 									</ul>
 								</li>
-								<li><a>#일용직 급여(백재영)<span class="fa fa-chevron-down"></span></a>
+								<li><a>#일용직 급여 관리<span class="fa fa-chevron-down"></span></a>
 									<ul class="nav child_menu">
 										<li class="sub_menu"><a href="#">급여 등록</a></li>
 										<li class="sub_menu"><a href="#">급여 조회</a></li>
 									</ul>
 								</li>
-								<li><a>#근태 관리(백재영)<span class="fa fa-chevron-down"></span></a>
+								<li><a>#출퇴근 관리<span class="fa fa-chevron-down"></span></a>
 									<ul class="nav child_menu">
 										<li class="sub_menu"><a href="#">출퇴근 등록</a></li>
 										<li class="sub_menu"><a href="#">출퇴근 조회</a></li>
-										<li class="sub_menu"><a href="#">근태 등록</a></li>
-										<li class="sub_menu"><a href="#">근태 조회</a></li>
-									</ul>
-								</li>
-								<li><a>#원천 관리(백재영)<span class="fa fa-chevron-down"></span></a>
-									<ul class="nav child_menu">
-										<li class="sub_menu"><a href="#">상용직 급여 관리</a></li>
-										<li class="sub_menu"><a href="#">상용직 급여 조회</a></li>
-										<li class="sub_menu"><a href="#">일용직 급여 관리</a></li>
-										<li class="sub_menu"><a href="#">일용직 급여 조회</a></li>
 									</ul>
 								</li>
 							</ul>
