--- a/gentelella/src/main/resources/templates/index.html
+++ b/gentelella/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 	layout:decorate="@{layout/default}">
 	
 <th:block layout:fragment="customTitle">
-	<title>타이틀</title>
+	<title>메인 index</title>
 </th:block>
 
 
