--- a/gentelella/src/main/resources/templates/fragments/head.html
+++ b/gentelella/src/main/resources/templates/fragments/head.html
@@ -27,7 +27,7 @@
     <link href="/vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="/build/css/custom.min.css" rel="stylesheet">
+    <link href="/build/css/custom.css" rel="stylesheet">
     
 	<!-- 화면 title 설정  -->
 	<th:block layout:fragment="customTitle"></th:block>
