--- a/gentelella/src/main/resources/templates/menu/addmenu.html
+++ b/gentelella/src/main/resources/templates/menu/addmenu.html
@@ -1,17 +1,15 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	  layout:decorate="@{layout/default}">
 
 	<th:block layout:fragment="customTitle">
-		<title>품목 등록</title>
+		<title>메뉴 등록</title>
 	</th:block>
 
 	<th:block layout:fragment="customContents">
-
-
+		<div class="right_col" role="main">
+		</div>
 	</th:block>
 
 </html>
