--- a/gentelella/src/main/resources/templates/menu/getrecipy.html
+++ b/gentelella/src/main/resources/templates/menu/getrecipy.html
@@ -1,16 +1,16 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	  layout:decorate="@{layout/default}">
 
 	<th:block layout:fragment="customTitle">
-		<title>재고 조사 내역 조회</title>
+		<title>메뉴 레시피 조회</title>
 	</th:block>
 
 	<th:block layout:fragment="customContents">
-
+		<div class="right_col" role="main">
+		
+		</div>
 
 	</th:block>
 
